feat: add Titanic prediction API with schema, service, and views

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ venv
 .env.staging
 .env*
 __pycache__/
+.pkl
 
 # .gitignore template (https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore)
 # Byte-compiled / optimized / DLL files
