feat: add mlflow for model monitoring, integrate it with backend, and add code to readme.md + gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -210,4 +210,14 @@ __marimo__/
 
 # Streamlit
 .streamlit/secrets.toml
+
+# Model
 models/titanic_model.pkl
+titanic_model-mlflow.pkl
+
+# Data
+data/raw/Titanic-Dataset.csv
+
+# MLflow
+mlruns/
+mlartifacts/
